--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "expensewise",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +21,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
     "http": "^0.0.1-security",
     "http-status": "^1.5.3",
     "joi": "~17.7.0",
