add auth controller to respond auth routes
- add SMTP configuration
- add auth controller with capabilities to register, login, logout, see profile, and reset/forgot password
- add auth and aysnc handler middlewares
- add auth routes
- add mail sender and error response utils
- add node mailer package
- add request file to test api endpoints
- add SMTP creds to env

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,14 @@
 NODE_ENV = "development"
 MONGODB_URL = "mongodb://localhost:27017/expensewise"
 PORT = 3000
+
 JWT_SECRET = "burgir"
+JWT_EXPIRE = 30d
+JWT_COOKIE_EXPIRE = 30
+
+SMTP_HOST = smtp.gmail.com
+SMTP_PORT = 465
+SMTP_EMAIL = demo@email.com
+SMTP_PASSWORD = app_specific_password
+FROM_EMAIL = demo@email.com
+FROM_NAME = ExpenseWise
