--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -25,6 +25,8 @@
         "func-names": "off",
         "no-process-exit": "off",
         "implicit-arrow-linebreak": "off",
-        "operator-linebreak": "off"
+        "operator-linebreak": "off",
+        "no-underscore-dangle": "off",
+        "object-curly-newline": "off"
     }
 }
