--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "winston": "^3.8.2",
     "xss-clean": "^0.1.1"
