use es6 syntax for importing and exporting

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -8,7 +8,8 @@
   "plugins": ["prettier"],
   "overrides": [],
   "parserOptions": {
-    "ecmaVersion": "latest"
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
   "rules": {
     "quotes": ["warn", "double"],
