--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon --es-module-specifier-resolution=node index.js",
     "lint": "eslint .",
     "lint_fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
