--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -15,9 +15,9 @@
     "no-unused-vars": "warn",
     "func-names": "off", // to avoid unnamed annoymus function warning
     "implicit-arrow-linebreak": "off", // to allow one line function
-    "operator-linebreak": "off", // to avoid conflict between prettier and lint
+    "operator-linebreak": "off", // to allow line break after operators like '='
     "no-underscore-dangle": "off", // for mongoose to allow _id
-    "object-curly-newline": "off", // to avoid conflict between prettier and lint
+    "object-curly-newline": "off", // to avoid line break during destructuring the object
     "consistent-return": "off", // to avoid expected to return a value at the end of async arrow function error
     "node/no-unsupported-features/es-syntax": "off", // to allow ES6 syntax
     "max-len": ["warn", 80] // set line length to 80
