address PR feedback
- use file level constants
- improve response messages
- fix nits

--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,9 @@ NODE_ENV = "development"
 MONGODB_URL = "mongodb://localhost:27017/expensewise"
 PORT = 3000
 
-JWT_SECRET = "burgir"
+JWT_SECRET = "Your Secret"
 JWT_EXPIRE = 30d
-JWT_COOKIE_EXPIRE = 30
+JWT_COOKIE_EXPIRE_IN_DAYS = 30
 
 SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
