--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -13,13 +13,13 @@
   "rules": {
     "quotes": ["warn", "double"],
     "no-unused-vars": "warn",
-    "func-names": "off",
-    "no-process-exit": "off",
-    "implicit-arrow-linebreak": "off",
-    "operator-linebreak": "off",
-    "no-underscore-dangle": "off",
-    "object-curly-newline": "off",
-    "consistent-return": "off",
-    "node/no-unsupported-features/es-syntax": "off"
+    "func-names": "off", // to avoid unnamed annoymus function warning
+    "implicit-arrow-linebreak": "off", // to allow one line function
+    "operator-linebreak": "off", // to avoid conflict between prettier and lint
+    "no-underscore-dangle": "off", // for mongoose to allow _id
+    "object-curly-newline": "off", // to avoid conflict between prettier and lint
+    "consistent-return": "off", // to avoid expected to return a value at the end of async arrow function error
+    "node/no-unsupported-features/es-syntax": "off", // to allow ES6 syntax
+    "max-len": ["warn", 80] // set line length to 80
   }
 }
