--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "start": "nodemon --es-module-specifier-resolution=node index.js",
     "lint": "eslint .",
     "lint_fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -36,6 +36,8 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@jest/globals": "^29.3.1",
     "eslint": "^8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -47,7 +49,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.0"
+    "jest": "^29.3.1",
+    "moment": "^2.29.4",
+    "node-mocks-http": "^1.12.1",
+    "prettier": "^2.8.0",
+    "supertest": "^6.3.3"
   },
   "author": "",
   "license": "ISC"
