added dependencies for mui

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,11 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.3",
+    "@mui/styles": "^5.11.2",
     "react-router-dom": "^6.6.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
