--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "start": "nodemon --es-module-specifier-resolution=node index.js",
     "lint": "eslint .",
     "lint_fix": "eslint . --fix",
-    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest --runInBand"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
