--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "expensewise",
   "version": "0.0.1",
   "engines": {
-    "node": ">=12.0.0"
+    "node": "16.14.2",
+    "npm": "8.5.0"
   },
   "type": "module",
   "description": "",
