--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@mui/styles": "^5.11.2",
     "react-router-dom": "^6.6.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
