--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,18 +4,24 @@
     "es2021": true,
     "jest": true
   },
-
   "settings": {
     "react": {
       "version": "detect"
     }
   },
-
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended",
     "plugin:cypress/recommended"
+  ],
+  "overrides": [
+    {
+      "files": ["**/*.cy.ts"],
+      "rules": {
+        "max-len": "off" // disable max line length for specs
+      }
+    }
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
