add e2e spec for expense module

--- a/server/.env
+++ b/server/.env
@@ -12,3 +12,4 @@ SMTP_EMAIL = demo@email.com
 SMTP_PASSWORD = app_specific_password
 FROM_EMAIL = demo@email.com
 FROM_NAME = ExpenseWise
+DEVELOPER_TOKEN = "iamdeveloper"
