--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_URI = http://localhost:3000/api/v1
+REACT_APP_GOOGLE_CLIENT_ID = 364539732595-nimfrqjtt902ja8vgpetrhsl4a48rqoh.apps.googleusercontent.com
