--- a/server/.env
+++ b/server/.env
@@ -8,8 +8,8 @@ JWT_COOKIE_EXPIRE_IN_DAYS = 30
 
 SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
-SMTP_EMAIL = demo@email.com
-SMTP_PASSWORD = app_specific_password
+SMTP_EMAIL = demo37485@gmail.com
+SMTP_PASSWORD = rkrbaumzqepnxdvw
 FROM_EMAIL = demo@email.com
 FROM_NAME = ExpenseWise
 DEVELOPER_TOKEN = "iamdeveloper"
