--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest --runInBand"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
