--- a/server/.env
+++ b/server/.env
@@ -1,15 +1,13 @@
-NODE_ENV = "production"
-MONGODB_URL = "mongodb://localhost:27017/expensewise"
-PORT = 3000
-
-JWT_SECRET = "Your Secret"
-JWT_EXPIRE = 30d
-JWT_COOKIE_EXPIRE_IN_DAYS = 30
-
-SMTP_HOST = smtp.gmail.com
-SMTP_PORT = 465
-SMTP_EMAIL = demo37485@gmail.com
-SMTP_PASSWORD = rkrbaumzqepnxdvw
-FROM_EMAIL = demo@email.com
-FROM_NAME = ExpenseWise
-DEVELOPER_TOKEN = "iamdeveloper"
+NODE_ENV = NODE_ENV
+PORT = PORT
+MONGODB_URL = MONGODB_URL
+JWT_SECRET = JWT_SECRET
+JWT_EXPIRE = JWT_EXPIRE
+JWT_COOKIE_EXPIRE_IN_DAYS = JWT_COOKIE_EXPIRE_IN_DAYS
+SMTP_HOST = SMTP_HOST
+SMTP_PORT = SMTP_PORT
+SMTP_EMAIL = SMTP_EMAIL
+SMTP_PASSWORD = SMTP_PASSWORD
+FROM_EMAIL = FROM_EMAIL
+FROM_NAME = FROM_NAME
+DEVELOPER_TOKEN = DEVELOPER_TOKEN
