--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "aws-sdk": "^2.1324.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "winston": "^3.8.2",
