--- a/server/.env
+++ b/server/.env
@@ -11,3 +11,6 @@ SMTP_PASSWORD = SMTP_PASSWORD
 FROM_EMAIL = FROM_EMAIL
 FROM_NAME = FROM_NAME
 DEVELOPER_TOKEN = DEVELOPER_TOKEN
+BUCKET_NAME = BUCKET_NAME
+AWS_S3_ACCESS_KEY_ID = AWS_S3_ACCESS_KEY_ID
+AWS_S3_SECRET_ACCESS_KEY = AWS_S3_SECRET_ACCESS_KEY
